# GrokTask

./: .gitignore  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/: acceptance.md  grok-activity-app.md
docs/plans/: phase4-conversation-ui.md  phase5-tray-agent-integrations.md  phase6-migration-release.md  phase7-agent-workflow-ui.md  standalone-refactor.md
docs/research/: acp-conversation-flow.md
docs/specs/: README.md  acp-runtime.md  architecture.md  cli-mcp.md  conversation-stream.md  integrations.md  persistence-ipc.md  product.md
src/: App.vue  index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  fingerprint.rs  main.rs  paths.rs  version.rs
src-tauri/src/acp/: mod.rs  normalize.rs  process.rs  redact.rs  reducer.rs  types.rs
src-tauri/src/app/: gui_host.rs  login_item.rs  mod.rs  tray.rs  windows.rs
src-tauri/src/cli/: help.rs  mod.rs
src-tauri/src/daemon/: lifecycle.rs  mod.rs  spawn.rs  task_manager.rs
src-tauri/src/doctor/: mod.rs
src-tauri/src/dto/: mod.rs
src-tauri/src/integrations/: claude.rs  codex.rs  mod.rs  types.rs  workflow.rs
src-tauri/src/ipc/: client.rs  codec.rs  mod.rs  protocol.rs  transport.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/storage/: db.rs  leases.rs  migrations.rs  mod.rs  repository.rs  retention.rs  snapshot.rs
src-tauri/src/supervisor/: mod.rs
src/lib/: expansion.ts  (+10 more)
test/: grok-acp-bridge.test.mjs  grok-activity-core.test.mjs  grok-activity-server.test.mjs  grok-companion.test.mjs
tests/: expansion.test.ts  ipc.test.ts  markdown.test.ts  phase7-ui.test.ts  scroll.test.ts  settings-ui.test.ts  shell-ui.test.ts  smoke.test.ts  thought-summary.test.ts  timeline-projection.test.ts  timeline-ui.test.ts  tool-display.test.ts
(+36 files in other folders)
